# hanabi

./: .gitignore  Cargo.toml  README  README.md  hanabi.html  justfile
.github/: build.yaml  shuttle.yaml
.github/workflows/: deploy.yml  integration.yml  rust.yml  shuttle.yaml
client/: Cargo.toml
client/src/: hanabi_app.rs  input.rs  lobby_app.rs  main.rs
ratatui-app/: Cargo.toml
ratatui-app/src/: components.rs  glyphs.rs  hanabi_app.rs  input_app.rs  key_code.rs  lib.rs  nodes.rs  test_data.rs  test_example.rs  text.rs
server/: Cargo.toml  Shuttle.toml
server/src/: main.rs  main.rs.shuttle
server/src/static/: enum Color {.rs  index.html
shared/: Cargo.toml
shared/src/: client_logic.rs  lib.rs  logic.rs  model.rs  server_logic.rs
shuttle-server/: Cargo.toml  Shuttle.toml
shuttle-server/migrations/: 0001_init.sql  0002_move_cards.sql
shuttle-server/src/: main.rs  model.rs  server.rs
shuttle_server/: Cargo.toml
shuttle_server/src/: main.rs  model.rs  server.rs
src/: README  client_logic.rs  hanabi_app.rs  logic.rs  main.rs  model.rs  test.rs
src/logic/: logic_tests.rs
web-client/: Cargo.toml  index.html
web-client/src/: hanabi_backend.rs  input.rs  main.rs  theme.rs
