[package]
name = "hanabi_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
colored = "2.0.4"
enum-map = "2.6.1"
autosurgeon = "0.8.0"
automerge = "0.5.1"
strum = "0.25.0"
strum_macros = "0.25.2"
ratatui = { version = "0.26.2", features = ["all-widgets"] }
crossterm = "0.27.0"
itertools = "0.12.1"
